# Cpp2-project1

./: CMakeLists.txt  Database.cpp  Database.h  DonorList.cpp  DonorList.h  DonorListCopyFunctions.cpp  DonorType.cpp  DonorType.h  Interface.cpp  Interface.h  LICENSE.txt  Main.cpp  MainTesting.cpp  MemberType.cpp  MemberType.h  ProjectA.cpp  README.md  donorType.cpp  donorType.h  donortype
